// Copyright 2022 Prysmatic Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package theqrl.engine.v1;

import "proto/qrl/ext/options.proto";

option csharp_namespace = "TheQRL.Engine.V1";
option go_package = "github.com/theQRL/qrysm/proto/engine/v1;enginev1";
option java_multiple_files = true;
option java_outer_classname = "ExecutionEngineProto";
option java_package = "org.theqrl.engine.v1";
option php_namespace = "TheQRL\\Engine\\v1";


message ExecutionPayloadBodyV1 {
	repeated bytes transactions = 1;
	repeated Withdrawal withdrawals = 2;
}

message ExecutionPayloadCapella {
	bytes parent_hash           = 1 [(theqrl.qrl.ext.ssz_size) = "32"];
	bytes fee_recipient         = 2 [(theqrl.qrl.ext.ssz_size) = "20"];
	bytes state_root            = 3 [(theqrl.qrl.ext.ssz_size) = "32"];
	bytes receipts_root         = 4 [(theqrl.qrl.ext.ssz_size) = "32"];
	bytes logs_bloom            = 5 [(theqrl.qrl.ext.ssz_size) = "logs_bloom.size"];
	bytes prev_randao           = 6 [(theqrl.qrl.ext.ssz_size) = "32"];
	uint64 block_number         = 7;
	uint64 gas_limit            = 8;
	uint64 gas_used             = 9;
	uint64 timestamp            = 10;
	bytes extra_data            = 11 [(theqrl.qrl.ext.ssz_max) = "extra_data.size"];
	bytes base_fee_per_gas      = 12 [(theqrl.qrl.ext.ssz_size) = "32"];
	bytes block_hash            = 13 [(theqrl.qrl.ext.ssz_size) = "32"];
	repeated bytes transactions = 14 [(theqrl.qrl.ext.ssz_size) = "?,?", (theqrl.qrl.ext.ssz_max)  = "1048576,1073741824"];
	// MAX_WITHDRAWALS_PER_PAYLOAD
	repeated Withdrawal withdrawals = 15 [(theqrl.qrl.ext.ssz_max) = "withdrawal.size"]; // New in Capella.
}

message ExecutionPayloadCapellaWithValue {
	ExecutionPayloadCapella payload = 1;
	bytes value = 2;
}

message ExecutionPayloadHeaderCapella {
	bytes parent_hash       = 1 [(theqrl.qrl.ext.ssz_size) = "32"];
	bytes fee_recipient     = 2 [(theqrl.qrl.ext.ssz_size) = "20"];
	bytes state_root        = 3 [(theqrl.qrl.ext.ssz_size) = "32"];
	bytes receipts_root     = 4 [(theqrl.qrl.ext.ssz_size) = "32"];
	bytes logs_bloom        = 5 [(theqrl.qrl.ext.ssz_size) = "logs_bloom.size"];
	bytes prev_randao       = 6 [(theqrl.qrl.ext.ssz_size) = "32"];
	uint64 block_number     = 7;
	uint64 gas_limit        = 8;
	uint64 gas_used         = 9;
	uint64 timestamp        = 10;
	bytes extra_data        = 11 [(theqrl.qrl.ext.ssz_max) = "extra_data.size"];
	bytes base_fee_per_gas  = 12 [(theqrl.qrl.ext.ssz_size) = "32"];
	bytes block_hash        = 13 [(theqrl.qrl.ext.ssz_size) = "32"];
	bytes transactions_root = 14 [(theqrl.qrl.ext.ssz_size) = "32"];
	bytes withdrawals_root  = 15 [(theqrl.qrl.ext.ssz_size) = "32"];
}

message PayloadAttributesV2 {
	uint64 timestamp                = 1;
	bytes prev_randao               = 2 [(theqrl.qrl.ext.ssz_size) = "32"];
	bytes suggested_fee_recipient   = 3 [(theqrl.qrl.ext.ssz_size) = "20"];
	repeated Withdrawal withdrawals = 4 [(theqrl.qrl.ext.ssz_max) = "withdrawal.size"];
}

message PayloadStatus {
	Status status           = 1;
	bytes latest_valid_hash = 2 [(theqrl.qrl.ext.ssz_size) = "32"];
	string validation_error = 3;
	enum Status {
		UNKNOWN                 = 0;
		VALID                   = 1;
		INVALID                 = 2;
		SYNCING                 = 3;
		ACCEPTED                = 4;
		INVALID_BLOCK_HASH      = 5;
	}
}

message ForkchoiceState {
	bytes head_block_hash      = 1 [(theqrl.qrl.ext.ssz_size) = "32"];
	bytes safe_block_hash      = 2 [(theqrl.qrl.ext.ssz_size) = "32"];
	bytes finalized_block_hash = 3 [(theqrl.qrl.ext.ssz_size) = "32"];
}

// The withdrawal receipt with the recipient address and amount withdrawn
message Withdrawal {
	// Withdrawal index for accounting purposes
	uint64 index = 1;

	// Validator index for the withdrawal
	uint64 validator_index = 2 [(theqrl.qrl.ext.cast_type) = "github.com/theQRL/qrysm/consensus-types/primitives.ValidatorIndex"];

	// The execution address receiving the funds
	bytes address = 3 [(theqrl.qrl.ext.ssz_size) = "20"];

	// The withdrawn amount in Shor
	uint64 amount = 4;
}
